<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity"
    android:background="@color/defaultColor"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--<ImageView-->
        <!--android:id="@+id/activity_entry_background"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@mipmap/entrybackground"-->
        <!--android:contentDescription="@string/layout_background"-->
        <!--android:scaleType="centerCrop"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <ImageView
            android:id="@+id/activity_entry_hand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/hand_end"
            android:contentDescription="@string/layout_hand"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_handbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_entry_handytool"
            android:layout_width="@dimen/handytool_width"
            android:layout_height="@dimen/handytool_heigth"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/handytool_marginStart"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31"
            app:srcCompat="@drawable/ic_handytool_1" />

        <TextView
            android:id="@+id/activity_entry_pressbutton"
            android:layout_width="@dimen/press_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_entry_handytool"
            android:layout_alignStart="@+id/activity_entry_handytool"
            android:layout_marginTop="@dimen/press_marginTop"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/layout_pressbutton"
            android:textColor="@color/defaultColor"
            android:textSize="@dimen/press_textSize"
            app:fontFamily="@font/opensans_semibold"
            app:layout_constraintEnd_toEndOf="@+id/activity_entry_handytool"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_entry_handytool"
            app:layout_constraintTop_toBottomOf="@+id/activity_entry_handytool" />

        <TextView
            android:id="@+id/activity_entry_declaration"
            android:layout_width="@dimen/disclaimer_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_entry_pressbutton"
            android:layout_alignStart="@id/activity_entry_pressbutton"
            android:fontFamily="@font/opensans_lightitalic"
            android:text="@string/declaration"
            android:textColor="@color/defaultColor"
            android:textSize="@dimen/disclaimer_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_entry_pressbutton"
            app:layout_constraintTop_toBottomOf="@+id/activity_entry_pressbutton"
            app:layout_constraintVertical_bias="0.24000001" />

    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:id="@+id/activity_entry_endowja"
        android:layout_width="@dimen/endowja_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/company"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_endowja" />

</RelativeLayout>